# pylm

./: .env.example  README.md  pyproject.toml
src/: chat.py  main.py  tools.py
src/helpers/: func_names.py
src/opencode_tools/: octools.py
