[build-system]
requires=["setuptools>=42", "wheel"]
build-backend="setuptools.build_meta"

[project]
name = "llama-python"
version = "0.2.1"
description = "A CLI chatbot (code roaster) using Qwen3:8b LLM"
readme = "README.md"
authors=[{name="Damian", email="example@me.com"}]
license={text="MIT"}
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
start-chat="src.main:main"

[tool.setuptools]
packages=["src"]
